--- a/themes/hugo-resume/layouts/partials/about.html
+++ b/themes/hugo-resume/layouts/partials/about.html
@@ -9,6 +9,8 @@
                 <span class="text-primary">{{ .Site.Params.lastName }}</span>
               </h1>
               
+              <h4 class="mb-0">{{ .Site.Params.email }}
+              </h4>
 
             </div>
 
