--- a/themes/hugo-resume/layouts/_default/baseof.html
+++ b/themes/hugo-resume/layouts/_default/baseof.html
@@ -74,5 +74,10 @@
         window.kommunicate = m; m._globals = kommunicateSettings;
       })(document, window.kommunicate || {});
   </script>
+  {
+  "message": "<iframe width='250' height='200' src='https://www.youtube.com/embed/aAJvI0UOspM'></iframe>",
+  "platform": "kommunicate",
+  "messageType": "html"
+}
 </body>
 </html>
