--- a/themes/hugo-resume/layouts/_default/baseof.html
+++ b/themes/hugo-resume/layouts/_default/baseof.html
@@ -64,34 +64,17 @@
   {{ block "footerfiles" . }}
 
   {{ end }}
- <script type="text/javascript">
-    (function(d, m){
-
-    /*---------------- Kommunicate settings start ----------------*/
-
-     var kommunicateSettings = {
-      "appId": "<APP_ID>",  
-      "automaticChatOpenOnNavigation": true,
-      "popupWidget": true
-      /*
-      "onInit": function (){
-        // paste your code here
-      }
-      */
-      };
-
-    /*----------------- Kommunicate settings end ------------------*/
-
-     var s = document.createElement("script");
-      s.type = "text/javascript";
-      s.async = true;
-      s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-      var h = document.getElementsByTagName("head")[0];
-      h.appendChild(s);
-      window.kommunicate = m;
-      m._globals = kommunicateSettings;
-    })(document, window.kommunicate || {});
-</script>
+  
+<script type="text/javascript">
+      /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+      (function(d, m){
+        var kommunicateSettings = {"appId":"1ede0219aaa026259dc290f19f1e32e32","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+      })(document, window.kommunicate || {});
+  </script>
 
 
 </body>
