--- a/themes/hugo-resume/layouts/_default/baseof.html
+++ b/themes/hugo-resume/layouts/_default/baseof.html
@@ -150,8 +150,8 @@
 
             // send it to the Lex runtime
             var params = {
-                botAlias: '$LATEST',
-                botName: 'BookTrip',
+                botAlias: 'profile',
+                botName: 'ZionBot',
                 inputText: wisdom,
                 userId: lexUserId,
                 sessionAttributes: sessionAttributes
