--- a/themes/hugo-resume/layouts/_default/baseof.html
+++ b/themes/hugo-resume/layouts/_default/baseof.html
@@ -74,7 +74,17 @@
 
   {{ end }}
   
- 
+ <script src="/lex-web-ui-loader.min.js"></script>
+<script>
+  var loaderOpts = {
+    baseUrl: '/',
+    shouldLoadMinDeps: true
+  };
+  var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
+  loader.load()
+    .catch(function (error) { console.error(error); });
+</script>
+  
 
 
 </body>
