--- a/themes/hugo-resume/layouts/_default/baseof.html
+++ b/themes/hugo-resume/layouts/_default/baseof.html
@@ -77,17 +77,16 @@
   {{ end }}
  
 
-
-  <script type="text/javascript">
-      /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-      (function(d, m){
-        var kommunicateSettings = {"appId":"1ede0219aaa026259dc290f19f1e32e32","popupWidget":true,"automaticChatOpenOnNavigation":true};
-        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-        window.kommunicate = m; m._globals = kommunicateSettings;
-      })(document, window.kommunicate || {});
-  </script>
+<script src="/https://d2kgtsw8ujc207.cloudfront.net/index.html#/?lexWebUiEmbed=true"></script>
+<script>
+  var loaderOpts = {
+    baseUrl: '/ https://d2kgtsw8ujc207.cloudfront.net',
+    shouldLoadMinDeps: true
+  };
+  var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
+  loader.load()
+    .catch(function (error) { console.error(error); });
+</script>
 
 
 </body>
