--- a/themes/hugo-resume/layouts/partials/about.html
+++ b/themes/hugo-resume/layouts/partials/about.html
@@ -27,14 +27,26 @@
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fab {{ if .icon}}fa-{{ .icon }}{{ else }}fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
+                      
                     </span>
                   </a>
+                  
                 </li>
+                
             {{ end }}
+            
           </ul>
         </div>
+        
+        <div>
+          <img src="img/AWS-CloudPractitionerMain.png" style="max-width:150px;padding:5px;"/><img src="img/AWS-SolutionArchitect-Associate.png"style="max-width:150px;padding:5px;"/>
+        </div>
+        
       </div>
       
       
       
+      
+      
     </section>
+
