--- a/themes/hugo-resume/layouts/partials/about.html
+++ b/themes/hugo-resume/layouts/partials/about.html
@@ -39,8 +39,7 @@
         </div>
         
         <div>
-          <img src="img/AWS-CloudPractitionerMain.png" style="max-width:150px;padding:5px;"/><img src="img/AWS-SolutionArchitect-Associate.png"style="max-width:150px;padding:5px;"/>
-        </div>
+          <img src="img/AWScerts2.png" style="max-width:500px;padding:2px;"/>
         
       </div>
       
